@@ -1,6 +1,8 @@
 2010/04/23 (m0skit0)
 - STILL DOESN'T WORK
 - Fixed a few bugs, mostly concerning syscall estimations being wrongly calculated. Now they seem fine, but still no go :(
+- Put back a loop at the end of loader (do not exit user_main)
+- Davee's free_game_memory adjusted to free user_main
 
 2010/04/22 (m0skit0)
 - NOT WORKING REVISION
